docker-compose com pgadmin4

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,4 +7,4 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 EXPOSE 5000
-CMD [ "python3", "-m" , "flask", "run", "--host=localhost"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "-c", "config.py", "app:app"]
