--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -7,6 +7,7 @@ networks:
 volumes:
   mongodb:
   movies:
+  
 
 services:
   mongo:
@@ -31,3 +32,16 @@ services:
       - produto_net
     volumes:
       - .:/app
+  mongo-express:
+    image: mongo-express
+    restart: always
+    depends_on:
+      - mongo
+    ports:
+      - 8081:8081
+    networks:
+      - produto_net
+    volumes:
+      - mongodb:/data/db
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://mongouser:mongopwd@mongo:27017/
